--- a/html/registro.html
+++ b/html/registro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="/css/registro.css">
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/registro.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         <div class="title">
             <h1>Registro</h1>
         </div>
-        <form action="/php/registrar_funcionario.php" method="post">
+        <form action="../php/registrar_funcionario.php" method="get">
             <input type="text" placeholder="Nome Completo" name="registrar_nome">
             <input type="email" placeholder="Email" name="registrar_email">
             <ul>
