Desenvolvimento da home
Desenvolvimento da home em progresso. Necessário centralizar o titulo, ou repraveita-lo nos status das salas.

--- a/html/home.html
+++ b/html/home.html
@@ -9,12 +9,23 @@
         <title>Home</title>
     </head>
     <body>
+
         <header>
-            <ul class="topo">
-                <li><h1 class="titulo">Salas</h1></li>
-                <!--Div temporaria apenas para representar imagem-->
-                <div class="img_perfil" style="width: 150px; height: 150px;"></div>
-            </ul>
+            <h1 class="titulo">Salas</h1>
+            <div class="perfil">
+                <div class="img_perfil"></div>
+                <p class="registro">0000000@docentesenaimg.com.br</p>
+            </div>
         </header>
+
+        <main>
+            <ul>
+                <li><h3 class="salas sala">Salas</h3></li>
+                <li><h3 class="salas sala_disponiveis">Salas disponiveis</h3></li>
+                <li><h3 class="salas sala_interditadas">Salas interditadas</h3></li>
+                <li><h3 class="salas sala_ocupadas">Salas ocupadas</h3></li>
+            </ul>
+        </main>
+
     </body>
 </html>
