--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,8 @@
     <body>
 
         <header>
-            <h1 class="titulo">Salas</h1>
+            <img src="../img/senai.png" alt="Logo Senai" class="senai_logo">
+            <h1 class="titulo">Painel central</h1>
             <div class="perfil">
                 <div class="img_perfil"></div>
                 <p class="registro">0000000@docentesenaimg.com.br</p>
@@ -20,10 +21,10 @@
 
         <main>
             <ul>
-                <li><h3 class="salas sala">Salas</h3></li>
-                <li><h3 class="salas sala_disponiveis">Salas disponiveis</h3></li>
-                <li><h3 class="salas sala_interditadas">Salas interditadas</h3></li>
-                <li><h3 class="salas sala_ocupadas">Salas ocupadas</h3></li>
+                <li><h3 class="salas sala">Salas: </h3></li>
+                <li><h3 class="salas sala_disponiveis">Salas disponiveis: </h3></li>
+                <li><h3 class="salas sala_interditadas">Salas interditadas: </h3></li>
+                <li><h3 class="salas sala_ocupadas">Salas ocupadas: </h3></li>
             </ul>
         </main>
 
