--- a/html/home.html
+++ b/html/home.html
@@ -15,18 +15,40 @@
             <h1 class="titulo">Painel central</h1>
             <div class="perfil">
                 <div class="img_perfil"></div>
-                <p class="registro">0000000@docentesenaimg.com.br</p>
+                <div class="teste">
+                    <p class="registro">0000000@docentesenaimg.com.br</p>
+                    <p class="sair">Sair</p>
+                </div>
             </div>
         </header>
 
         <main>
-            <ul>
-                <li><h3 class="salas sala">Salas: </h3></li>
+            <ul class="salas_status">
+                <li><h3 class="salas salas_totais">Salas: </h3></li>
                 <li><h3 class="salas sala_disponiveis">Salas disponiveis: </h3></li>
                 <li><h3 class="salas sala_interditadas">Salas interditadas: </h3></li>
                 <li><h3 class="salas sala_ocupadas">Salas ocupadas: </h3></li>
+                <a href="add_sala.html" target="_blank" class="link add_sala" id="add_sala">Adicionar sala</a>
             </ul>
+            <div class="tela_criar_sala" id="tela_criar_sala">
+                <form action="registar_sala" method="post">
+                    <input type="text" name="codigo_sala" id="texto_codigo_sala" placeholder="Código da sala">
+                    <input type="text" name="descricao_sala" id="texto_descricao_sala" placeholder="Descrição da sala">
+                    <input type="number" name="quantidade_sala" id="numero_quantidade_sala" placeholder="Quantidade da sala">
+                    <input type="button" value="Cadastrar" id="cadastrar_sala_btn">
+                </form>
+            </div>
+            <div class="salas"  id="salas">
+                <div class="sala_1 sala">
+                    <h4 class="tag">Sala 102E - Informatica</h4>
+                    <p class="tag">Responsavel: Claudio</p>
+                    <p class="tag">Data/hora Inicio: 26/07/23 - 13:00</p>
+                    <p class="tag">Data/hora Fim:  26/07/23 - 13:50</p>
+                    <p class="tag">Qtd: 40</p>
+                    <input type="button" value="-----------" class="botao reservar desocupar">
+                </div>
+            </div>
         </main>
-
+        <script src="../js/gerador_de_salas.js"></script>
     </body>
 </html>
