Classe HTML E JS
Além de um elemento ser criado, agora ele recebe uma classe dentro do HTML.

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
                 <form action="registar_sala" method="post">
                     <input type="text" name="codigo_sala" id="texto_codigo_sala" placeholder="Código da sala">
                     <input type="text" name="descricao_sala" id="texto_descricao_sala" placeholder="Descrição da sala">
-                    <input type="number" name="quantidade_sala" id="numero_quantidade_sala" placeholder="Quantidade da sala">
+                    <input type="number" name="quantidade_sala" id="numero_quantidade_sala" placeholder="Capacidade da sala">
                     <input type="button" value="Cadastrar" id="cadastrar_sala_btn">
                 </form>
             </div>
