--- a/html/home.html
+++ b/html/home.html
@@ -4,51 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/home.css">
+        <link rel="stylesheet" href="../css/home.css">
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
         <title>Home</title>
     </head>
     <body>
 
         <header>
-            <img src="../img/senai.png" alt="Logo Senai" class="senai_logo">
-            <h1 class="titulo">Painel central</h1>
+            <h1 class="titulo">Salas</h1>
             <div class="perfil">
-                <div class="img_perfil"></div>
-                <div class="teste">
-                    <p class="registro">0000000@docentesenaimg.com.br</p>
-                    <p class="sair">Sair</p>
-                </div>
+           <div class="img_perfil"></div>
+                <p class="registro">0000000@docentesenaimg.com.br</p>
             </div>
         </header>
 
         <main>
-            <ul class="salas_status">
-                <li><h3 class="salas salas_totais">Salas: </h3></li>
-                <li><h3 class="salas sala_disponiveis">Salas disponiveis: </h3></li>
-                <li><h3 class="salas sala_interditadas">Salas interditadas: </h3></li>
-                <li><h3 class="salas sala_ocupadas">Salas ocupadas: </h3></li>
-                <a href="add_sala.html" target="_blank" class="link add_sala" id="add_sala">Adicionar sala</a>
+            <ul>
+                <li><h3 class="salas sala">Salas</h3></li>
+                <li><h3 class="salas sala_disponiveis">Salas disponiveis</h3></li>
+                <li><h3 class="salas sala_interditadas">Salas interditadas</h3></li>
+                <li><h3 class="salas sala_ocupadas">Salas ocupadas</h3></li>
             </ul>
-            <div class="tela_criar_sala" id="tela_criar_sala">
-                <form action="registar_sala" method="post">
-                    <input type="text" name="codigo_sala" id="texto_codigo_sala" placeholder="Código da sala">
-                    <input type="text" name="descricao_sala" id="texto_descricao_sala" placeholder="Descrição da sala">
-                    <input type="number" name="quantidade_sala" id="numero_quantidade_sala" placeholder="Capacidade da sala">
-                    <input type="button" value="Cadastrar" id="cadastrar_sala_btn">
-                </form>
-            </div>
-            <div class="salas"  id="salas">
-                <div class="sala_1 sala">
-                    <h4 class="tag">Sala 102E - Informatica</h4>
-                    <p class="tag">Responsavel: Claudio</p>
-                    <p class="tag">Data/hora Inicio: 26/07/23 - 13:00</p>
-                    <p class="tag">Data/hora Fim:  26/07/23 - 13:50</p>
-                    <p class="tag">Qtd: 40</p>
-                    <input type="button" value="-----------" class="botao reservar desocupar">
-                </div>
-            </div>
         </main>
-        <script src="../js/gerador_de_salas.js"></script>
+
     </body>
 </html>
