--- a/html/home.html
+++ b/html/home.html
@@ -39,7 +39,7 @@
                 </form>
             </div>
             <div class="salas"  id="salas">
-                <div class="sala_1 sala">
+                <div class="sala">
                     <h4 class="tag">Sala 102E - Informatica</h4>
                     <p class="tag">Responsavel: Claudio</p>
                     <p class="tag">Data/hora Inicio: 26/07/23 - 13:00</p>
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </main>
+
         <script src="../js/gerador_de_salas.js"></script>
     </body>
 </html>
